[package]
name = "growth"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-service = "1.0.0"
env_logger = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
json = "0.12"
futures = "0.3.5"
bytes = "0.5.6"